[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "Vernier"
description = "Python post-processing library for Vernier profiling tool"
authors = [
]
license = {file = 'LICENSE'}
requires-python = '>=3.12'
dependencies = ['numpy']
version = '0.1.0'

[project.optional-dependencies]
dev = [
    'mypy'
]

[project.scripts]
summarise-vernier = 'vernier.tools.summarise_vernier:main'

[project.urls]
homepage = 'https://github.com/MetOffice/Vernier'
documentation = 'https://MetOffice.github.io/Vernier'
repository = 'https://github.com/MetOffice/Vernier'
'Bug Reports' = 'https://github.com/MetOffice/Vernier'

